tests/snapshots/run_wpt_conformance__onnx_l2Pool2d_float32_4D_constant_tensor_all_positive_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "l2Pool2d.https.any.js",
    "l2Pool2d float32 4D constant tensor all positive default options",
    "onnx",
    "PASS",
)
